// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when default 1`] = `
<div
  class="container selected"
  data-testid="favored-enemy-selector"
>
  <div
    class="monster-type-container"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <label
        id="monster-type-label"
        style="font-size: 1.3rem;"
      >
        Select Monster Type
      </label>
      <div
        aria-labelledby="monster-type-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Aberration
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Aberration"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-ABERRATION"
            role="option"
            tabindex="0"
          >
            Aberration
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-BEAST"
            role="option"
            tabindex="0"
          >
            Beast
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-CELESTIAL"
            role="option"
            tabindex="0"
          >
            Celestial
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-CONSTRUCT"
            role="option"
            tabindex="0"
          >
            Construct
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-DRAGON"
            role="option"
            tabindex="0"
          >
            Dragon
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-ELEMENTAL"
            role="option"
            tabindex="0"
          >
            Elemental
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-FEY"
            role="option"
            tabindex="0"
          >
            Fey
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-FIEND"
            role="option"
            tabindex="0"
          >
            Fiend
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GIANT"
            role="option"
            tabindex="0"
          >
            Giant
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-HUMANOID"
            role="option"
            tabindex="0"
          >
            Humanoid
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-MONSTROSITY"
            role="option"
            tabindex="0"
          >
            Monstrosity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-OOZE"
            role="option"
            tabindex="0"
          >
            Ooze
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-PLANT"
            role="option"
            tabindex="0"
          >
            Plant
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-UNDEAD"
            role="option"
            tabindex="0"
          >
            Undead
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when humanoid 1`] = `
<div
  class="container selected"
  data-testid="favored-enemy-selector"
>
  <div
    class="monster-type-container"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <label
        id="monster-type-label"
        style="font-size: 1.3rem;"
      >
        Select Monster Type
      </label>
      <div
        aria-labelledby="monster-type-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Humanoid
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Humanoid"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-ABERRATION"
            role="option"
            tabindex="0"
          >
            Aberration
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-BEAST"
            role="option"
            tabindex="0"
          >
            Beast
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-CELESTIAL"
            role="option"
            tabindex="0"
          >
            Celestial
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-CONSTRUCT"
            role="option"
            tabindex="0"
          >
            Construct
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-DRAGON"
            role="option"
            tabindex="0"
          >
            Dragon
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-ELEMENTAL"
            role="option"
            tabindex="0"
          >
            Elemental
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-FEY"
            role="option"
            tabindex="0"
          >
            Fey
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-FIEND"
            role="option"
            tabindex="0"
          >
            Fiend
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-GIANT"
            role="option"
            tabindex="0"
          >
            Giant
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-HUMANOID"
            role="option"
            tabindex="0"
          >
            Humanoid
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-MONSTROSITY"
            role="option"
            tabindex="0"
          >
            Monstrosity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-OOZE"
            role="option"
            tabindex="0"
          >
            Ooze
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-PLANT"
            role="option"
            tabindex="0"
          >
            Plant
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-UNDEAD"
            role="option"
            tabindex="0"
          >
            Undead
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="humanoid-container"
  >
    <div
      class="monster-type-container"
    >
      <div
        class="list-box-and-error-container"
        data-testid="select"
      >
        <label
          id="humanoid-1-label"
          style="font-size: 1.5rem;"
        >
          Select Humanoid Type 1
        </label>
        <div
          aria-labelledby="humanoid-1-label"
          class="list-box-container"
          style="font-size: 1.3rem;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="button"
            data-testid="select-button"
            type="button"
          >
            Dwarf
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <ul
            aria-activedescendant="Dwarf"
            class="list"
            data-testid="select-list"
            role="listbox"
            style="display: none;"
            tabindex="-1"
          >
            <li
              aria-selected="false"
              class="item"
              data-testid="data-blank"
              role="option"
              tabindex="0"
            >
              —
            </li>
            <li
              aria-selected="true"
              class="item selected"
              data-testid="data-DWARF"
              role="option"
              tabindex="0"
            >
              Dwarf
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-ELF"
              role="option"
              tabindex="0"
            >
              Elf
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-GNOLL"
              role="option"
              tabindex="0"
            >
              Gnoll
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-GNOME"
              role="option"
              tabindex="0"
            >
              Gnome
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-GOBLINOID"
              role="option"
              tabindex="0"
            >
              Goblinoid
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-HUMAN"
              role="option"
              tabindex="0"
            >
              Human
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-KOBOLD"
              role="option"
              tabindex="0"
            >
              Kobold
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-LIZARDFOLK"
              role="option"
              tabindex="0"
            >
              Lizardfolk
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-MERFOLK"
              role="option"
              tabindex="0"
            >
              Merfolk
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-ORC"
              role="option"
              tabindex="0"
            >
              Orc
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-SAHUAGIN"
              role="option"
              tabindex="0"
            >
              Sahuagin
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="monster-type-container"
    >
      <div
        class="list-box-and-error-container"
        data-testid="select"
      >
        <label
          id="humanoid-2-label"
          style="font-size: 1.3rem;"
        >
          Select Humanoid Type 2
        </label>
        <div
          aria-labelledby="humanoid-2-label"
          class="list-box-container"
          style="font-size: 1.2rem;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="button"
            data-testid="select-button"
            type="button"
          >
            Elf
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <ul
            aria-activedescendant="Elf"
            class="list"
            data-testid="select-list"
            role="listbox"
            style="display: none;"
            tabindex="-1"
          >
            <li
              aria-selected="false"
              class="item"
              data-testid="data-blank"
              role="option"
              tabindex="0"
            >
              —
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-DWARF"
              role="option"
              tabindex="0"
            >
              Dwarf
            </li>
            <li
              aria-selected="true"
              class="item selected"
              data-testid="data-ELF"
              role="option"
              tabindex="0"
            >
              Elf
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-GNOLL"
              role="option"
              tabindex="0"
            >
              Gnoll
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-GNOME"
              role="option"
              tabindex="0"
            >
              Gnome
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-GOBLINOID"
              role="option"
              tabindex="0"
            >
              Goblinoid
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-HUMAN"
              role="option"
              tabindex="0"
            >
              Human
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-KOBOLD"
              role="option"
              tabindex="0"
            >
              Kobold
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-LIZARDFOLK"
              role="option"
              tabindex="0"
            >
              Lizardfolk
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-MERFOLK"
              role="option"
              tabindex="0"
            >
              Merfolk
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-ORC"
              role="option"
              tabindex="0"
            >
              Orc
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-SAHUAGIN"
              role="option"
              tabindex="0"
            >
              Sahuagin
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
